Add account deletion feature to UI, refactor deletion API
